<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">متابعة العهدة</string>
    <string name="login">تسجيل الدخول</string>
    <string name="register">التسجيل</string>
    <string name="user_hint">البريد الألكتروني</string>
    <string name="pass_hint">كلمة السر</string>
    <string name="forgot_pass">نسيت كلمة السر؟</string>
    <string name="phone_hint">Enter your number</string>
    <string name="verify">verify</string>
    <string name="no_account" tools:ignore="StringEscaping">ليس لديك حساب؟</string>
    <string name="logo_con_des">logo</string>
    <string name="hello">مرحبا بك سجل الدخول للمتابعة</string>
    <string name="new_user">مرحبا بك في متابعة العهدة رجاء قم بإنشاء حساب</string>
    <string name="signin">signin to continue</string>
    <string name="signup">انشئ الحساب للمتابعة</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
